@startuml
skinparam state {
    BackgroundColor HoneyDew
}

[*] --> NOTSTARTED
NOTSTARTED --> INPROGRESS : COLLECTION_INSTRUMENT_DOWNLOADED
NOTSTARTED --> INPROGRESS : EQ_LAUNCH
NOTSTARTED --> COMPLETE : SUCCESSFUL_RESPONSE_UPLOAD
NOTSTARTED --> NOTSTARTED: ACCESS_CODE_AUTHENTICATION_ATTEMPT
NOTSTARTED --> NOTSTARTED: RESPONDENT_ENROLED

NOTSTARTED --> COMPLETEDBYPHONE : COMPLETED_BY_PHONE
NOTSTARTED --> NOLONGERREQUIRED : NO_LONGER_REQUIRED
    
INPROGRESS --> COMPLETE : OFFLINE_RESPONSE_PROCESSED
INPROGRESS --> COMPLETE : SUCCESSFUL_RESPONSE_UPLOAD
INPROGRESS -> INPROGRESS: EQ_LAUNCH
INPROGRESS -> INPROGRESS: ACCESS_CODE_AUTHENTICATION_ATTEMPT
INPROGRESS -> INPROGRESS: COLLECTION_INSTRUMENT_DOWNLOADED
INPROGRESS -> COMPLETEDBYPHONE : COMPLETED_BY_PHONE
INPROGRESS --> NOLONGERREQUIRED : NO_LONGER_REQUIRED

REOPENED --> COMPLETEDBYPHONE : COMPLETED_BY_PHONE
REOPENED --> NOLONGERREQUIRED : NO_LONGER_REQUIRED

COMPLETE --> COMPLETE : ACCESS_CODE_AUTHENTICATION_ATTEMPT
@enduml
